common/hashicorp-vault/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hashicorp-vault
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
